# Midway-1978-Space-Invader-Machine-C-Emulator

./: 8080_Emulator.sln  8080_Emulator.vcxproj  8080_Emulator.vcxproj.filters  CMakeLists.txt  Disassembler8080.c  Disassembler8080.h  Emulate8080.c  Emulate8080.h  EmulateMWSpaceInvaders.c  EmulateMWSpaceInvaders.h  EmulateMWSpaceInvaders_tests.c  MWDisplay.h  README.md  SDL3.dll.recipe  SpaceInvaderMachine.h  main.c  main_test.c  roy_c.c
include/: Emulate8080.h  EmulateMWSpaceInvaders.h  MWDisplay.h  Opcodes8080.h  resource.h
include/CPU8080/: Disassembler8080.h  Emulate8080.h  Opcodes8080.h
include/SDL3_plugin/: SDL_display.h  SDL_input.h  SDL_platform.h  SDL_sound.h
include/SpaceInvaders_machine/: EmulateMWSpaceInvaders.h  MWDisplay.h  MWInput.h  MWSound.h  SpaceInvaderMachine.h  SpaceInvaderPlatformInterface.h
src/: Emulate8080.c  EmulateMWSpaceInvaders.c  MWDisplay.c  Opcodes8080.c  SpaceInvaderMachine.c  main.c
src/CPU8080/: Disassembler8080.c  Emulate8080.c  Opcodes8080.c
src/SDL3_plugin/: SDL_display.c  SDL_input.c  SDL_platform.c  SDL_sound.c  main_SDL.c
src/SpaceInvaders_machine/: EmulateMWSpaceInvaders.c  MWDisplay.c  MWInput.c  MWSound.c  SpaceInvaderMachine.c
tests/: Emulate8080_test.cpp  Opcodes8080_test.cpp
